--- a/src/app/planner/settings/settings.component.html
+++ b/src/app/planner/settings/settings.component.html
@@ -1,5 +1,5 @@
 @if (draftFormGroup) {
-  <div class="p-2">
+  <div class="p-4 flex flex-col justify-between items-center">
     <div class="settings-container">
       <mat-form-field>
         <mat-label>Format</mat-label>
