--- a/src/app/planner/settings/settings.component.scss
+++ b/src/app/planner/settings/settings.component.scss
@@ -1,3 +1,9 @@
 .settings-container {
-  @apply space-x-2;
+  justify-content: space-between;
+  display: flex;
+  width: 100%;
+}
+
+mat-form-field:not(:last-child) {
+  padding-right: 0.5rem;
 }
