fix planner clear not resetting subscriptions

--- a/src/app/planner/planner.component.html
+++ b/src/app/planner/planner.component.html
@@ -67,7 +67,10 @@
           }
           @if (summary) {
             <mat-tab label="Summary" [tabIndex]="0">
-              <summary class="h-full list-none" [summary]="summary"></summary>
+              <planner-summary
+                class="h-full list-none"
+                [summary]="summary"
+              ></planner-summary>
             </mat-tab>
           }
           @if (typechart && recommended) {
