--- a/src/app/planner/moves/moves.component.html
+++ b/src/app/planner/moves/moves.component.html
@@ -1,26 +1,60 @@
-<div class="h-full overflow-y-auto">
-  <div class="flex justify-between px-4">
-    <div class="flex items-center space-x-2">
-      <label for="unlearned">Show Unlearned</label>
-      <input #unlearned [(ngModel)]="showUnlearned" type="checkbox" />
-    </div>
-    <!-- <div class="flex items-center space-x-2">
-      <label for="unlearned">Collapse</label>
-      <div
-        class="items-center justify-end w-4 h-4 m-2 ml-auto border rounded cursor-pointer border-menu-500 bg-menu-400 hover:bg-menu-200"
-      >
-        <minus-svg class="h-full" title="Hide"></minus-svg>
-      </div>
-    </div> -->
+<div class="main-container">
+  <div class="options-container">
+    <mat-slide-toggle (change)="updateShownMoves($event.checked)"
+      >Show Unlearned</mat-slide-toggle
+    >
   </div>
 
-  <div class="border-4 border-menu-400 bg-menu-400 h-fit">
-    <move-category
-      [unlearned]="showUnlearned"
-      *ngFor="let category of this.movechart"
-      [category]="category"
-      [cols]="2"
-    >
-    </move-category>
-  </div>
+  <cdk-accordion class="movechart">
+    @for (category of shownMoves.value; track $index) {
+      <cdk-accordion-item
+        #accordionItem="cdkAccordionItem"
+        class="category-container"
+      >
+        <button
+          class="category-header"
+          [disabled]="category.moves.length === 0"
+          (click)="accordionItem.toggle()"
+          tabindex="0"
+        >
+          <div>
+            {{ category.categoryName }}
+            <span class="count">{{ category.moves.length }}</span>
+          </div>
+          @if (category.moves.length > 0) {
+            @if (accordionItem.expanded) {
+              <mat-icon>unfold_less</mat-icon>
+            } @else {
+              <mat-icon>unfold_more</mat-icon>
+            }
+          }
+        </button>
+        <div
+          class="category-body"
+          role="region"
+          [class.expanded]="accordionItem.expanded"
+        >
+          @for (move of category.moves; track $index) {
+            <div class="move-container">
+              <div
+                [matTooltip]="move.desc"
+                matTooltipPosition="above"
+                class="move-title"
+                [ngClass]="'border-' + move.type.toLowerCase()"
+              >
+                {{ move.name }}
+              </div>
+              <div class="pokemon-container">
+                @for (pokemon of move.pokemon; track $index) {
+                  <div class="sprite-wrapper">
+                    <sprite [pokemon]="pokemon"></sprite>
+                  </div>
+                }
+              </div>
+            </div>
+          }
+        </div>
+      </cdk-accordion-item>
+    }
+  </cdk-accordion>
 </div>
