--- a/src/app/planner/planner.component.scss
+++ b/src/app/planner/planner.component.scss
@@ -69,3 +69,11 @@
   padding: 6px;
   cursor: pointer;
 }
+
+.movechart-container {
+  display: flex;
+  width: 100%;
+  height: 100%;
+  overflow-y: auto;
+  justify-content: center;
+}
