planner movechart fixes

--- a/src/app/debug/sprites/debug-sprites.component.html
+++ b/src/app/debug/sprites/debug-sprites.component.html
@@ -1,5 +1,11 @@
 <div class="flex flex-wrap">
   @for (pokemon of names; track pokemon) {
-    <div class="w-12"><sprite [pokemon]="pokemon"></sprite></div>
+    <div class="w-12">
+      <sprite [pokemon]="pokemon"></sprite
+      ><span
+        class="text-xs text-page text-clip w-12 overflow-clip whitespace-nowrap"
+        >{{ pokemon.name }}</span
+      >
+    </div>
   }
 </div>
