--- a/src/app/util/pokemon-select/pokemon-select.component.html
+++ b/src/app/util/pokemon-select/pokemon-select.component.html
@@ -5,7 +5,7 @@
     }"
   > -->
   <mat-form-field class="w-full">
-    @if (setPokemon) {
+    @if (showSprite !== null && setPokemon) {
       <div matPrefix class="selected-sprite">
         <sprite [flipped]="true" [pokemon]="setPokemon"></sprite>
       </div>
